@@ -17,6 +17,9 @@ package com.liferay.gradle.plugins;
 import aQute.bnd.osgi.Constants;
 import aQute.bnd.version.Version;
 
+import com.liferay.gradle.plugins.cache.CacheExtension;
+import com.liferay.gradle.plugins.cache.CachePlugin;
+import com.liferay.gradle.plugins.cache.task.TaskCache;
 import com.liferay.gradle.plugins.extensions.LiferayExtension;
 import com.liferay.gradle.plugins.extensions.LiferayOSGiExtension;
 import com.liferay.gradle.plugins.js.module.config.generator.ConfigJSModulesTask;
@@ -27,13 +30,13 @@ import com.liferay.gradle.plugins.service.builder.ServiceBuilderPlugin;
 import com.liferay.gradle.plugins.tasks.BaselineTask;
 import com.liferay.gradle.plugins.tasks.InstallCacheTask;
 import com.liferay.gradle.plugins.tasks.ReplaceRegexTask;
-import com.liferay.gradle.plugins.tasks.UpdateVersionTask;
 import com.liferay.gradle.plugins.test.integration.TestIntegrationBasePlugin;
 import com.liferay.gradle.plugins.tlddoc.builder.TLDDocBuilderPlugin;
 import com.liferay.gradle.plugins.tlddoc.builder.tasks.TLDDocTask;
 import com.liferay.gradle.plugins.upgrade.table.builder.UpgradeTableBuilderPlugin;
 import com.liferay.gradle.plugins.util.FileUtil;
 import com.liferay.gradle.plugins.util.GradleUtil;
+import com.liferay.gradle.plugins.util.IncrementVersionClosure;
 import com.liferay.gradle.plugins.whip.WhipPlugin;
 import com.liferay.gradle.plugins.wsdd.builder.WSDDBuilderPlugin;
 import com.liferay.gradle.plugins.wsdl.builder.WSDLBuilderPlugin;
@@ -53,6 +56,7 @@ import java.io.File;
 
 import java.nio.charset.StandardCharsets;
 
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumSet;
@@ -83,13 +87,13 @@ import org.gradle.api.artifacts.DependencySet;
 import org.gradle.api.artifacts.ModuleDependency;
 import org.gradle.api.artifacts.ProjectDependency;
 import org.gradle.api.artifacts.ResolutionStrategy;
-import org.gradle.api.artifacts.ResolvedConfiguration;
-import org.gradle.api.artifacts.ResolvedDependency;
 import org.gradle.api.artifacts.dsl.ArtifactHandler;
 import org.gradle.api.artifacts.dsl.RepositoryHandler;
 import org.gradle.api.artifacts.maven.Conf2ScopeMapping;
 import org.gradle.api.artifacts.maven.Conf2ScopeMappingContainer;
+import org.gradle.api.artifacts.repositories.AuthenticationContainer;
 import org.gradle.api.artifacts.repositories.MavenArtifactRepository;
+import org.gradle.api.artifacts.repositories.PasswordCredentials;
 import org.gradle.api.execution.TaskExecutionGraph;
 import org.gradle.api.file.CopySpec;
 import org.gradle.api.file.DuplicatesStrategy;
@@ -112,6 +116,9 @@ import org.gradle.api.plugins.ReportingBasePlugin;
 import org.gradle.api.plugins.quality.FindBugs;
 import org.gradle.api.plugins.quality.FindBugsPlugin;
 import org.gradle.api.plugins.quality.FindBugsReports;
+import org.gradle.api.plugins.quality.Pmd;
+import org.gradle.api.plugins.quality.PmdExtension;
+import org.gradle.api.plugins.quality.PmdPlugin;
 import org.gradle.api.reporting.SingleFileReport;
 import org.gradle.api.specs.Spec;
 import org.gradle.api.tasks.Copy;
@@ -132,7 +139,8 @@ import org.gradle.api.tasks.testing.logging.TestLogEvent;
 import org.gradle.api.tasks.testing.logging.TestLoggingContainer;
 import org.gradle.execution.ProjectConfigurer;
 import org.gradle.external.javadoc.CoreJavadocOptions;
-import org.gradle.external.javadoc.MinimalJavadocOptions;
+import org.gradle.external.javadoc.StandardJavadocDocletOptions;
+import org.gradle.internal.authentication.DefaultBasicAuthentication;
 import org.gradle.internal.service.ServiceRegistry;
 import org.gradle.plugins.ide.eclipse.EclipsePlugin;
 import org.gradle.plugins.ide.eclipse.model.EclipseClasspath;
@@ -156,7 +164,13 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	public static final String COPY_LIBS_TASK_NAME = "copyLibs";
 
 	public static final String DEFAULT_REPOSITORY_URL =
-		"http://cdn.repository.liferay.com/nexus/content/groups/public";
+		"https://cdn.lfrs.sl/repository.liferay.com/nexus/content/groups/" +
+			"public";
+
+	public static final String DEPLOY_APP_SERVER_LIB_TASK_NAME =
+		"deployAppServerLib";
+
+	public static final String DEPLOY_TOOL_TASK_NAME = "deployTool";
 
 	public static final String INSTALL_CACHE_TASK_NAME = "installCache";
 
@@ -167,9 +181,6 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	public static final String JAR_TLDDOC_TASK_NAME = "jarTLDDoc";
 
 	public static final String PORTAL_TEST_CONFIGURATION_NAME = "portalTest";
-
-	public static final String UPDATE_BUNDLE_VERSION_TASK_NAME =
-		"updateBundleVersion";
 
 	public static final String UPDATE_FILE_VERSIONS_TASK_NAME =
 		"updateFileVersions";
@@ -189,6 +200,16 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		final boolean publishing = isPublishing(project);
 		boolean testProject = isTestProject(project);
 
+		boolean deployToAppServerLibs = false;
+		boolean deployToTools = false;
+
+		if (FileUtil.exists(project, ".lfrbuild-app-server-lib")) {
+			deployToAppServerLibs = true;
+		}
+		else if (FileUtil.exists(project, ".lfrbuild-tool")) {
+			deployToTools = true;
+		}
+
 		applyPlugins(project);
 
 		// applyConfigScripts configures the "install" and "uploadArchives"
@@ -200,6 +221,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		configureMavenConf2ScopeMappings(project);
 
 		applyConfigScripts(project);
+
+		addDependenciesPmd(project);
 
 		if (testProject || hasTests(project)) {
 			GradleUtil.applyPlugin(project, WhipDefaultsPlugin.class);
@@ -234,20 +257,32 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 		addTaskCopyLibs(project);
 
+		if (deployToAppServerLibs) {
+			addTaskAlias(
+				project, DEPLOY_APP_SERVER_LIB_TASK_NAME,
+				LiferayBasePlugin.DEPLOY_TASK_NAME);
+		}
+		else if (deployToTools) {
+			addTaskAlias(
+				project, DEPLOY_TOOL_TASK_NAME,
+				LiferayBasePlugin.DEPLOY_TASK_NAME);
+		}
+
 		final Jar jarJavadocTask = addTaskJarJavadoc(project);
 		final Jar jarSourcesTask = addTaskJarSources(project, testProject);
 		final Jar jarTLDDocTask = addTaskJarTLDDoc(project);
 
-		addTaskUpdateBundleVersion(project);
-
 		final ReplaceRegexTask updateFileVersionsTask =
 			addTaskUpdateFileVersions(project);
+		final ReplaceRegexTask updateVersionTask = addTaskUpdateVersion(
+			project);
 
 		configureBasePlugin(project, portalRootDir);
-		configureBundleDefaultInstructions(project, publishing);
+		configureBundleDefaultInstructions(project, portalRootDir, publishing);
 		configureConfigurations(project);
-		configureDeployDir(project);
+		configureDeployDir(project, deployToAppServerLibs, deployToTools);
 		configureJavaPlugin(project);
+		configurePmd(project, portalRootDir);
 		configureProject(project);
 		configureRepositories(project);
 		configureSourceSetMain(project);
@@ -255,9 +290,11 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		configureTaskJavadoc(project);
 		configureTaskTest(project);
 		configureTaskTestIntegration(project);
+		configureTaskTlddoc(project, portalRootDir);
 		configureTasksBaseline(project);
 		configureTasksFindBugs(project);
 		configureTasksJavaCompile(project);
+		configureTasksPmd(project);
 		configureTasksPublishNodeModule(project);
 
 		GradleUtil.withPlugin(
@@ -269,8 +306,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 					configureLocalPortalTool(
 						project, portalRootDir,
 						ServiceBuilderPlugin.CONFIGURATION_NAME,
-						ServiceBuilderDefaultsPlugin.PORTAL_TOOL_NAME,
-						"portal-tools-service-builder");
+						ServiceBuilderDefaultsPlugin.PORTAL_TOOL_NAME);
 				}
 
 			});
@@ -290,12 +326,17 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 					GradleUtil.setProjectSnapshotVersion(project);
 
+					if (GradleUtil.hasPlugin(project, CachePlugin.class)) {
+						configureTaskUpdateVersionForCachePlugin(
+							updateVersionTask);
+					}
+
 					// setProjectSnapshotVersion must be called before
 					// configureTaskUploadArchives, because the latter one needs
 					// to know if we are publishing a snapshot or not.
 
 					configureTaskUploadArchives(
-						project, updateFileVersionsTask);
+						project, updateFileVersionsTask, updateVersionTask);
 
 					configureProjectBndProperties(project);
 				}
@@ -311,7 +352,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		TaskExecutionGraph taskExecutionGraph = gradle.getTaskGraph();
 
 		taskExecutionGraph.whenReady(
-			new Closure<Void>(null) {
+			new Closure<Void>(project) {
 
 				@SuppressWarnings("unused")
 				public void doCall(TaskExecutionGraph taskExecutionGraph) {
@@ -324,6 +365,73 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 				}
 
 			});
+	}
+
+	protected static void configureRepositories(Project project) {
+		RepositoryHandler repositoryHandler = project.getRepositories();
+
+		if (!_MAVEN_LOCAL_IGNORE) {
+			repositoryHandler.mavenLocal();
+		}
+
+		repositoryHandler.maven(
+			new Action<MavenArtifactRepository>() {
+
+				@Override
+				public void execute(
+					MavenArtifactRepository mavenArtifactRepository) {
+
+					mavenArtifactRepository.setUrl(_REPOSITORY_URL);
+				}
+
+			});
+
+		if (Validator.isNotNull(_REPOSITORY_PRIVATE_PASSWORD) &&
+			Validator.isNotNull(_REPOSITORY_PRIVATE_URL) &&
+			Validator.isNotNull(_REPOSITORY_PRIVATE_USERNAME)) {
+
+			MavenArtifactRepository mavenArtifactRepository =
+				repositoryHandler.maven(
+					new Action<MavenArtifactRepository>() {
+
+						@Override
+						public void execute(
+							MavenArtifactRepository mavenArtifactRepository) {
+
+							mavenArtifactRepository.setUrl(
+								_REPOSITORY_PRIVATE_URL);
+						}
+
+					});
+
+			mavenArtifactRepository.authentication(
+				new Action<AuthenticationContainer>() {
+
+					@Override
+					public void execute(
+						AuthenticationContainer authenticationContainer) {
+
+						authenticationContainer.add(
+							new DefaultBasicAuthentication("basic"));
+					}
+
+				});
+
+			mavenArtifactRepository.credentials(
+				new Action<PasswordCredentials>() {
+
+					@Override
+					public void execute(
+						PasswordCredentials passwordCredentials) {
+
+						passwordCredentials.setPassword(
+							_REPOSITORY_PRIVATE_PASSWORD);
+						passwordCredentials.setUsername(
+							_REPOSITORY_PRIVATE_USERNAME);
+					}
+
+				});
+		}
 	}
 
 	protected static boolean isTestProject(Project project) {
@@ -384,6 +492,17 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 			"(," + String.valueOf(project.getVersion()) + ")", false);
 	}
 
+	protected void addDependenciesPmd(Project project) {
+		String version = GradleUtil.getPortalToolVersion(
+			project, _PMD_PORTAL_TOOL_NAME);
+
+		if (Validator.isNotNull(version)) {
+			GradleUtil.addDependency(
+				project, "pmd", GradleUtil.PORTAL_TOOL_GROUP,
+				_PMD_PORTAL_TOOL_NAME, version);
+		}
+	}
+
 	protected void addDependenciesPortalTest(Project project) {
 		GradleUtil.addDependency(
 			project, PORTAL_TEST_CONFIGURATION_NAME, "com.liferay.portal",
@@ -416,6 +535,20 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		GradleUtil.addDependency(
 			project, JavaPlugin.TEST_COMPILE_CONFIGURATION_NAME,
 			"org.springframework", "spring-test", "3.2.15.RELEASE");
+	}
+
+	protected Task addTaskAlias(
+		Project project, String taskName, String originalTaskName) {
+
+		Task task = project.task(taskName);
+
+		Task originalTask = GradleUtil.getTask(project, originalTaskName);
+
+		task.dependsOn(originalTask);
+		task.setDescription("Alias for " + originalTask);
+		task.setGroup(originalTask.getGroup());
+
+		return task;
 	}
 
 	protected Task addTaskBaseline(
@@ -451,6 +584,14 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 					}
 
 				});
+
+			String ignoreFailures = GradleUtil.getTaskPrefixedProperty(
+				baselineTask, "ignoreFailures");
+
+			if (Validator.isNotNull(ignoreFailures)) {
+				baselineTask.setIgnoreFailures(
+					Boolean.parseBoolean(ignoreFailures));
+			}
 
 			baselineTask.setNewJarFile(
 				new Callable<File>() {
@@ -638,12 +779,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 		copy.from(configuration);
 		copy.into(libDir);
-
-		Closure<String> closure = new RenameDependencyClosure(
-			project, configuration.getName());
-
-		copy.rename(closure);
-
+		copy.rename(
+			new RenameDependencyClosure(project, configuration.getName()));
 		copy.setEnabled(false);
 
 		Task classesTask = GradleUtil.getTask(
@@ -792,100 +929,14 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		return jar;
 	}
 
-	protected UpdateVersionTask addTaskUpdateBundleVersion(Project project) {
-		final UpdateVersionTask updateVersionTask = GradleUtil.addTask(
-			project, UPDATE_BUNDLE_VERSION_TASK_NAME, UpdateVersionTask.class);
-
-		updateVersionTask.onlyIf(
-			new Spec<Task>() {
-
-				@Override
-				public boolean isSatisfiedBy(Task task) {
-					UpdateVersionTask updateVersionTask =
-						(UpdateVersionTask)task;
-
-					String version = updateVersionTask.getVersion();
-
-					if (version.contains("LIFERAY-PATCHED-")) {
-						return false;
-					}
-
-					return true;
-				}
-
-			});
-
-		updateVersionTask.pattern(
-			"bnd.bnd",
-			Constants.BUNDLE_VERSION + ": " +
-				UpdateVersionTask.VERSION_PLACEHOLDER);
-
-		updateVersionTask.setDescription(
-			"Updates the project version in the " + Constants.BUNDLE_VERSION +
-				" header.");
-
-		updateVersionTask.setVersion(
-			new Callable<Object>() {
-
-				@Override
-				public Object call() throws Exception {
-					Project project = updateVersionTask.getProject();
-
-					return project.getVersion();
-				}
-
-			});
-
-		project.afterEvaluate(
-			new Action<Project>() {
-
-				@Override
-				public void execute(Project project) {
-					File moduleConfigFile = getModuleConfigFile(project);
-
-					if (moduleConfigFile == null) {
-						return;
-					}
-
-					updateVersionTask.pattern(
-						moduleConfigFile,
-						"\"version\": \"" +
-							UpdateVersionTask.VERSION_PLACEHOLDER + "\"");
-				}
-
-			});
-
-		return updateVersionTask;
-	}
-
 	protected ReplaceRegexTask addTaskUpdateFileVersions(
 		final Project project) {
 
 		ReplaceRegexTask replaceRegexTask = GradleUtil.addTask(
 			project, UPDATE_FILE_VERSIONS_TASK_NAME, ReplaceRegexTask.class);
 
-		replaceRegexTask.doLast(
-			new Action<Task>() {
-
-				@Override
-				public void execute(Task task) {
-					ReplaceRegexTask replaceRegexTask = (ReplaceRegexTask)task;
-
-					if (!_logger.isLifecycleEnabled()) {
-						return;
-					}
-
-					for (Object file : replaceRegexTask.getMatchedFiles()) {
-						_logger.lifecycle(
-							"Updated project version in " +
-								project.relativePath(file));
-					}
-				}
-
-			});
-
 		replaceRegexTask.pre(
-			new Closure<String>(null) {
+			new Closure<String>(project) {
 
 				@SuppressWarnings("unused")
 				public String doCall(String content, File file) {
@@ -895,16 +946,22 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 						return content;
 					}
 
+					String configuration =
+						ProvidedBasePlugin.getPROVIDED_CONFIGURATION_NAME() +
+							" ";
+
 					return content.replaceAll(
-						Pattern.quote(getProjectDependency(project)),
+						Pattern.quote(
+							configuration + getProjectDependency(project)),
 						Matcher.quoteReplacement(
-							getModuleDependency(project, true)));
+							configuration +
+								getModuleDependency(project, true)));
 				}
 
 			});
 
 		replaceRegexTask.replaceOnlyIf(
-			new Closure<Boolean>(null) {
+			new Closure<Boolean>(project) {
 
 				@SuppressWarnings("unused")
 				public Boolean doCall(
@@ -939,7 +996,6 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 		replaceRegexTask.setDescription(
 			"Updates the project version in external files.");
-		replaceRegexTask.setIgnoreUnmatched(true);
 
 		replaceRegexTask.setReplacement(
 			new Callable<Object>() {
@@ -947,6 +1003,60 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 				@Override
 				public Object call() throws Exception {
 					return project.getVersion();
+				}
+
+			});
+
+		return replaceRegexTask;
+	}
+
+	protected ReplaceRegexTask addTaskUpdateVersion(Project project) {
+		final ReplaceRegexTask replaceRegexTask = GradleUtil.addTask(
+			project, LiferayRelengPlugin.UPDATE_VERSION_TASK_NAME,
+			ReplaceRegexTask.class);
+
+		replaceRegexTask.match("Bundle-Version: (.+)(?:\\s|$)", "bnd.bnd");
+
+		replaceRegexTask.onlyIf(
+			new Spec<Task>() {
+
+				@Override
+				public boolean isSatisfiedBy(Task task) {
+					Project project = task.getProject();
+
+					String version = String.valueOf(project.getVersion());
+
+					if (version.contains("LIFERAY-PATCHED-")) {
+						return false;
+					}
+
+					return true;
+				}
+
+			});
+
+		replaceRegexTask.setDescription(
+			"Updates the project version in the " + Constants.BUNDLE_VERSION +
+				" header.");
+
+		replaceRegexTask.setReplacement(
+			IncrementVersionClosure.MICRO_INCREMENT);
+
+		project.afterEvaluate(
+			new Action<Project>() {
+
+				@Override
+				public void execute(Project project) {
+					File moduleConfigFile = getModuleConfigFile(project);
+
+					if ((moduleConfigFile == null) ||
+						!moduleConfigFile.exists()) {
+
+						return;
+					}
+
+					replaceRegexTask.match(
+						"\\n\\t\"version\": \"(.+)\"", moduleConfigFile);
 				}
 
 			});
@@ -967,6 +1077,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		GradleUtil.applyPlugin(project, IdeaPlugin.class);
 		GradleUtil.applyPlugin(project, MavenPlugin.class);
 		GradleUtil.applyPlugin(project, OptionalBasePlugin.class);
+		GradleUtil.applyPlugin(project, PmdPlugin.class);
 		GradleUtil.applyPlugin(project, ProvidedBasePlugin.class);
 
 		if (FileUtil.exists(project, "service.xml")) {
@@ -1097,17 +1208,21 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	}
 
 	protected void configureBundleDefaultInstructions(
-		Project project, boolean publishing) {
+		Project project, File portalRootDir, boolean publishing) {
 
 		LiferayOSGiExtension liferayOSGiExtension = GradleUtil.getExtension(
 			project, LiferayOSGiExtension.class);
 
 		Map<String, Object> bundleDefaultInstructions = new HashMap<>();
 
+		bundleDefaultInstructions.put("-check", "exports");
 		bundleDefaultInstructions.put(Constants.BUNDLE_VENDOR, "Liferay, Inc.");
 		bundleDefaultInstructions.put(
 			Constants.DONOTCOPY,
 			"(" + LiferayOSGiExtension.DONOTCOPY_DEFAULT + "|.touch" + ")");
+		bundleDefaultInstructions.put(
+			Constants.FIXUPMESSAGES + ".deprecated",
+			"annotations are deprecated");
 		bundleDefaultInstructions.put(Constants.SOURCES, "false");
 
 		if (publishing) {
@@ -1118,22 +1233,27 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 				"Git-SHA", "${system-allow-fail;git rev-list -1 HEAD}");
 		}
 
-		File appDir = GradleUtil.getRootDir(project, _APP_BND_FILE_NAME);
+		File appBndFile = getAppBndFile(project, portalRootDir);
 
-		if (appDir != null) {
-			File appFile = new File(appDir, _APP_BND_FILE_NAME);
-
+		if (appBndFile != null) {
 			bundleDefaultInstructions.put(
-				Constants.INCLUDE, FileUtil.getRelativePath(project, appFile));
+				Constants.INCLUDE,
+				FileUtil.getRelativePath(project, appBndFile));
+		}
+
+		File packageJsonFile = project.file("package.json");
+
+		if (packageJsonFile.exists()) {
+			bundleDefaultInstructions.put(
+				Constants.INCLUDERESOURCE + ".packagejson",
+				FileUtil.getRelativePath(project, packageJsonFile));
 		}
 
 		liferayOSGiExtension.bundleDefaultInstructions(
 			bundleDefaultInstructions);
 	}
 
-	protected void configureBundleExportPackage(
-		Project project, Map<String, String> bundleInstructions) {
-
+	protected void configureBundleInstructions(Project project) {
 		String projectPath = project.getPath();
 
 		if (!projectPath.startsWith(":apps:") &&
@@ -1142,6 +1262,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 			return;
 		}
+
+		Map<String, String> bundleInstructions = getBundleInstructions(project);
 
 		String exportPackage = bundleInstructions.get(Constants.EXPORT_PACKAGE);
 
@@ -1152,73 +1274,6 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		exportPackage = "!com.liferay.*.kernel.*," + exportPackage;
 
 		bundleInstructions.put(Constants.EXPORT_PACKAGE, exportPackage);
-	}
-
-	protected void configureBundleInstructions(Project project) {
-		Map<String, String> bundleInstructions = getBundleInstructions(project);
-
-		configureBundleExportPackage(project, bundleInstructions);
-		configureBundleLiferayIncludeResource(project, bundleInstructions);
-	}
-
-	protected void configureBundleLiferayIncludeResource(
-		Project project, Map<String, String> bundleInstructions) {
-
-		String includeResource = bundleInstructions.get(
-			_LIFERAY_INCLUDERESOURCE);
-
-		if (Validator.isNull(includeResource) ||
-			!includeResource.contains("-*.")) {
-
-			return;
-		}
-
-		Configuration configuration = GradleUtil.getConfiguration(
-			project, JavaPlugin.COMPILE_CONFIGURATION_NAME);
-
-		DependencySet dependencySet = configuration.getAllDependencies();
-
-		GradleInternal gradle = (GradleInternal)project.getGradle();
-
-		ServiceRegistry serviceRegistry = gradle.getServices();
-
-		ProjectConfigurer projectConfigurer = serviceRegistry.get(
-			ProjectConfigurer.class);
-
-		for (ProjectDependency projectDependency :
-				dependencySet.withType(ProjectDependency.class)) {
-
-			ProjectInternal dependencyProject =
-				(ProjectInternal)projectDependency.getDependencyProject();
-
-			projectConfigurer.configure(dependencyProject);
-
-			if (!GradleUtil.hasPlugin(dependencyProject, BasePlugin.class)) {
-				continue;
-			}
-
-			String name = GradleUtil.getArchivesBaseName(dependencyProject);
-			String version = String.valueOf(dependencyProject.getVersion());
-
-			includeResource = includeResource.replace(
-				name + "-*.", name + "-" + version + ".");
-		}
-
-		ResolvedConfiguration resolvedConfiguration =
-			configuration.getResolvedConfiguration();
-
-		for (ResolvedDependency resolvedDependency :
-				resolvedConfiguration.getFirstLevelModuleDependencies()) {
-
-			String name = resolvedDependency.getModuleName();
-			String version = resolvedDependency.getModuleVersion();
-
-			includeResource = includeResource.replace(
-				name + "-*.", name + "-" + version + ".");
-		}
-
-		bundleInstructions.put(
-			Constants.INCLUDERESOURCE + ".liferay", includeResource);
 	}
 
 	protected void configureConfiguration(Configuration configuration) {
@@ -1278,7 +1333,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 		if (projectPath.startsWith(":apps:") ||
 			projectPath.startsWith(":core:") ||
-			projectPath.startsWith(":private:") ||
+			projectPath.startsWith(":private:apps:") ||
+			projectPath.startsWith(":private:core:") ||
 			FileUtil.exists(project.getRootProject(), ".gitrepo")) {
 
 			configureConfigurationTransitive(
@@ -1308,7 +1364,10 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		configuration.setTransitive(transitive);
 	}
 
-	protected void configureDeployDir(final Project project) {
+	protected void configureDeployDir(
+		final Project project, final boolean deployToAppServerLibs,
+		final boolean deployToTools) {
+
 		final LiferayExtension liferayExtension = GradleUtil.getExtension(
 			project, LiferayExtension.class);
 
@@ -1317,6 +1376,23 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 				@Override
 				public File call() throws Exception {
+					if (deployToAppServerLibs) {
+						return new File(
+							liferayExtension.getAppServerPortalDir(),
+							"WEB-INF/lib");
+					}
+
+					if (deployToTools) {
+						return new File(
+							liferayExtension.getLiferayHome(),
+							"tools/" + project.getName());
+					}
+
+					if (FileUtil.exists(project, ".lfrbuild-static")) {
+						return new File(
+							liferayExtension.getLiferayHome(), "osgi/static");
+					}
+
 					String archivesBaseName = GradleUtil.getArchivesBaseName(
 						project);
 
@@ -1324,10 +1400,9 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 						return new File(
 							liferayExtension.getLiferayHome(), "osgi/portal");
 					}
-					else {
-						return new File(
-							liferayExtension.getLiferayHome(), "osgi/modules");
-					}
+
+					return new File(
+						liferayExtension.getLiferayHome(), "osgi/modules");
 				}
 
 			});
@@ -1379,7 +1454,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 	protected void configureLocalPortalTool(
 		Project project, File portalRootDir, String configurationName,
-		String portalToolName, String portalToolDirName) {
+		String portalToolName) {
 
 		if (portalRootDir == null) {
 			return;
@@ -1396,7 +1471,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		configuration.exclude(args);
 
 		File dir = new File(
-			portalRootDir, "tools/sdk/tmp/portal-tools/" + portalToolDirName);
+			portalRootDir, "tools/sdk/dependencies/" + portalToolName + "/lib");
 
 		FileTree fileTree = FileUtil.getJarsFileTree(project, dir);
 
@@ -1424,6 +1499,24 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		mappings.remove(configuration);
 	}
 
+	protected void configurePmd(Project project, File portalRootDir) {
+		PmdExtension pmdExtension = GradleUtil.getExtension(
+			project, PmdExtension.class);
+
+		if (portalRootDir != null) {
+			File ruleSetFile = new File(
+				portalRootDir,
+				"tools/sdk/dependencies/net.sourceforge.pmd/rulesets/java/" +
+					"standard-rules.xml");
+
+			pmdExtension.setRuleSetFiles(project.files(ruleSetFile));
+		}
+
+		List<String> ruleSets = Collections.emptyList();
+
+		pmdExtension.setRuleSets(ruleSets);
+	}
+
 	protected void configureProject(Project project) {
 		project.setGroup(_GROUP);
 	}
@@ -1444,30 +1537,6 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		GradleUtil.setProperty(
 			project, "app.server.lib.portal.dir",
 			project.relativePath(appServerLibPortalDir));
-
-		GradleUtil.setProperty(
-			project, "plugin.full.version",
-			String.valueOf(project.getVersion()));
-	}
-
-	protected void configureRepositories(Project project) {
-		RepositoryHandler repositoryHandler = project.getRepositories();
-
-		if (!_MAVEN_LOCAL_IGNORE) {
-			repositoryHandler.mavenLocal();
-		}
-
-		repositoryHandler.maven(
-			new Action<MavenArtifactRepository>() {
-
-				@Override
-				public void execute(
-					MavenArtifactRepository mavenArtifactRepository) {
-
-					mavenArtifactRepository.setUrl(_REPOSITORY_URL);
-				}
-
-			});
 	}
 
 	protected void configureSourceSetClassesDir(
@@ -1538,12 +1607,19 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	protected void configureTaskBaseline(BaselineTask baselineTask) {
 		Project project = baselineTask.getProject();
 
-		boolean reportDiff = false;
-
 		String reportLevel = GradleUtil.getProperty(
 			project, "baseline.jar.report.level", "standard");
 
-		if (reportLevel.equals("diff") || reportLevel.equals("persist")) {
+		boolean reportLevelIsDiff = reportLevel.equals("diff");
+		boolean reportLevelIsPersist = reportLevel.equals("persist");
+
+		if (reportLevelIsPersist && FileUtil.exists(project, "bnd.bnd")) {
+			baselineTask.setBndFile("bnd.bnd");
+		}
+
+		boolean reportDiff = false;
+
+		if (reportLevelIsDiff || reportLevelIsPersist) {
 			reportDiff = true;
 		}
 
@@ -1586,7 +1662,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	}
 
 	protected void configureTaskJarSources(final Jar jarSourcesTask) {
-		Project project = jarSourcesTask.getProject();
+		final Project project = jarSourcesTask.getProject();
 
 		TaskContainer taskContainer = project.getTasks();
 
@@ -1601,14 +1677,12 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 							@Override
 							public FileCollection call() throws Exception {
-								Project project = patchTask.getProject();
-
 								return project.zipTree(
 									patchTask.getOriginalLibSrcFile());
 							}
 
 						},
-						new Closure<Void>(null) {
+						new Closure<Void>(project) {
 
 							@SuppressWarnings("unused")
 							public void doCall(CopySpec copySpec) {
@@ -1644,7 +1718,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 							}
 
 						},
-						new Closure<Void>(null) {
+						new Closure<Void>(project) {
 
 							@SuppressWarnings("unused")
 							public void doCall(CopySpec copySpec) {
@@ -1731,7 +1805,11 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	}
 
 	protected void configureTaskJavadocOptions(Javadoc javadoc) {
-		MinimalJavadocOptions minimalJavadocOptions = javadoc.getOptions();
+		StandardJavadocDocletOptions standardJavadocDocletOptions =
+			(StandardJavadocDocletOptions)javadoc.getOptions();
+
+		standardJavadocDocletOptions.setEncoding(StandardCharsets.UTF_8.name());
+
 		Project project = javadoc.getProject();
 
 		File overviewFile = null;
@@ -1752,9 +1830,15 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		}
 
 		if (overviewFile != null) {
-			minimalJavadocOptions.setOverview(
+			standardJavadocDocletOptions.setOverview(
 				project.relativePath(overviewFile));
 		}
+
+		standardJavadocDocletOptions.tags("generated");
+	}
+
+	protected void configureTaskPmd(Pmd pmd) {
+		pmd.setClasspath(null);
 	}
 
 	protected void configureTaskPublishNodeModule(
@@ -1814,6 +1898,21 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 			});
 	}
 
+	protected void configureTasksPmd(Project project) {
+		TaskContainer taskContainer = project.getTasks();
+
+		taskContainer.withType(
+			Pmd.class,
+			new Action<Pmd>() {
+
+				@Override
+				public void execute(Pmd pmd) {
+					configureTaskPmd(pmd);
+				}
+
+			});
+	}
+
 	protected void configureTasksPublishNodeModule(Project project) {
 		TaskContainer taskContainer = project.getTasks();
 
@@ -1835,9 +1934,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		Test test = (Test)GradleUtil.getTask(
 			project, JavaPlugin.TEST_TASK_NAME);
 
-		test.jvmArgs(_TEST_JVM_ARGS);
-
 		configureTaskTestIgnoreFailures(test);
+		configureTaskTestJvmArgs(test, "junit.java.unit.gc");
 		configureTaskTestLogging(test);
 	}
 
@@ -1849,9 +1947,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		Test test = (Test)GradleUtil.getTask(
 			project, TestIntegrationBasePlugin.TEST_INTEGRATION_TASK_NAME);
 
-		test.jvmArgs(_TEST_INTEGRATION_JVM_ARGS);
-
 		configureTaskTestIgnoreFailures(test);
+		configureTaskTestJvmArgs(test, "junit.java.integration.gc");
 		configureTaskTestLogging(test);
 
 		File resultsDir = project.file("test-results/integration");
@@ -1865,12 +1962,34 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		jUnitXmlReport.setDestination(resultsDir);
 	}
 
+	protected void configureTaskTestJvmArgs(Test test, String propertyName) {
+		String jvmArgs = GradleUtil.getProperty(
+			test.getProject(), propertyName, (String)null);
+
+		if (Validator.isNotNull(jvmArgs)) {
+			test.jvmArgs((Object[])jvmArgs.split("\\s+"));
+		}
+	}
+
 	protected void configureTaskTestLogging(Test test) {
 		TestLoggingContainer testLoggingContainer = test.getTestLogging();
 
 		testLoggingContainer.setEvents(EnumSet.allOf(TestLogEvent.class));
 		testLoggingContainer.setExceptionFormat(TestExceptionFormat.FULL);
 		testLoggingContainer.setStackTraceFilters(Collections.emptyList());
+	}
+
+	protected void configureTaskTlddoc(Project project, File portalRootDir) {
+		if (portalRootDir == null) {
+			return;
+		}
+
+		TLDDocTask tlddocTask = (TLDDocTask)GradleUtil.getTask(
+			project, TLDDocBuilderPlugin.TLDDOC_TASK_NAME);
+
+		File xsltDir = new File(portalRootDir, "tools/styles/taglibs");
+
+		tlddocTask.setXsltDir(xsltDir);
 	}
 
 	protected void configureTaskUpdateFileVersions(
@@ -1887,13 +2006,41 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 		}
 
 		args.put("dir", portalRootDir);
-		args.put("include", "**/*.gradle");
+		args.put(
+			"includes",
+			Arrays.asList("**/*.gradle", "**/sdk/*/README.markdown"));
 
 		updateFileVersionsTask.match(regex, project.fileTree(args));
 	}
 
+	protected void configureTaskUpdateVersionForCachePlugin(
+		ReplaceRegexTask updateVersionTask) {
+
+		Project project = updateVersionTask.getProject();
+
+		CacheExtension cacheExtension = GradleUtil.getExtension(
+			project, CacheExtension.class);
+
+		for (TaskCache taskCache : cacheExtension.getTasks()) {
+			String regex = "\"" + project.getName() + "@(.+?)\\/";
+
+			Map<String, Object> args = new HashMap<>();
+
+			args.put("dir", taskCache.getCacheDir());
+			args.put(
+				"includes", Arrays.asList("config.json", "**/*.js"));
+
+			FileTree fileTree = project.fileTree(args);
+
+			updateVersionTask.match(regex, fileTree);
+
+			updateVersionTask.finalizedBy(taskCache.getRefreshDigestTaskName());
+		}
+	}
+
 	protected void configureTaskUploadArchives(
-		Project project, ReplaceRegexTask updateFileVersionsTask) {
+		Project project, ReplaceRegexTask updateFileVersionsTask,
+		ReplaceRegexTask updateVersionTask) {
 
 		if (GradleUtil.isSnapshot(project)) {
 			return;
@@ -1909,14 +2056,8 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 		uploadArchivesTask.dependsOn(publishNodeModuleTasks);
 
-		Task updateBundleVersionTask = taskContainer.findByName(
-			UPDATE_BUNDLE_VERSION_TASK_NAME);
-
-		if (updateBundleVersionTask != null) {
-			uploadArchivesTask.finalizedBy(updateBundleVersionTask);
-		}
-
-		uploadArchivesTask.finalizedBy(updateFileVersionsTask);
+		uploadArchivesTask.finalizedBy(
+			updateFileVersionsTask, updateVersionTask);
 	}
 
 	protected void forceProjectDependenciesEvaluation(Project project) {
@@ -1951,6 +2092,45 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 					}
 
 				});
+		}
+	}
+
+	protected File getAppBndFile(Project project, File portalRootDir) {
+		File dir = GradleUtil.getRootDir(project, _APP_BND_FILE_NAME);
+
+		if (dir != null) {
+			return new File(dir, _APP_BND_FILE_NAME);
+		}
+
+		File modulesDir = new File(portalRootDir, "modules");
+
+		File modulesPrivateDir = new File(modulesDir, "private");
+
+		if (!FileUtil.isChild(project.getProjectDir(), modulesPrivateDir)) {
+			return null;
+		}
+
+		String path = FileUtil.relativize(
+			project.getProjectDir(), modulesPrivateDir);
+
+		if (File.pathSeparatorChar != '/') {
+			path = path.replace(File.pathSeparatorChar, '/');
+		}
+
+		while (true) {
+			File file = new File(modulesDir, path + "/" + _APP_BND_FILE_NAME);
+
+			if (file.exists()) {
+				return file;
+			}
+
+			int index = path.lastIndexOf('/');
+
+			if (index == -1) {
+				return null;
+			}
+
+			path = path.substring(0, index);
 		}
 	}
 
@@ -2015,7 +2195,7 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 	}
 
 	protected String getModuleDependency(
-		Project project, boolean roundToMajorVersion) {
+		Project project, boolean roundToMinorVersion) {
 
 		StringBuilder sb = new StringBuilder();
 
@@ -2027,11 +2207,12 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 		String versionString = String.valueOf(project.getVersion());
 
-		if (roundToMajorVersion) {
+		if (roundToMinorVersion) {
 			Version version = getVersion(versionString);
 
 			if (version != null) {
-				version = new Version(version.getMajor(), 0, 0);
+				version = new Version(
+					version.getMajor(), version.getMinor(), 0);
 
 				versionString = version.toString();
 			}
@@ -2132,34 +2313,25 @@ public class LiferayOSGiDefaultsPlugin implements Plugin<Project> {
 
 	private static final JavaVersion _JAVA_VERSION = JavaVersion.VERSION_1_7;
 
-	private static final String _LIFERAY_INCLUDERESOURCE =
-		"-liferay-includeresource";
-
 	private static final Version _LOWEST_BASELINE_VERSION = new Version(
 		1, 0, 0);
 
 	private static final boolean _MAVEN_LOCAL_IGNORE = Boolean.getBoolean(
 		"maven.local.ignore");
 
+	private static final String _PMD_PORTAL_TOOL_NAME = "com.liferay.pmd";
+
+	private static final String _REPOSITORY_PRIVATE_PASSWORD =
+		System.getProperty("repository.private.password");
+
+	private static final String _REPOSITORY_PRIVATE_URL = System.getProperty(
+		"repository.private.url");
+
+	private static final String _REPOSITORY_PRIVATE_USERNAME =
+		System.getProperty("repository.private.username");
+
 	private static final String _REPOSITORY_URL = System.getProperty(
 		"repository.url", DEFAULT_REPOSITORY_URL);
-
-	private static final Object[] _TEST_INTEGRATION_JVM_ARGS = {
-		"-Xms512m", "-Xmx512m", "-XX:MaxNewSize=32m", "-XX:MaxPermSize=200m",
-		"-XX:MaxTenuringThreshold=0", "-XX:NewSize=32m",
-		"-XX:ParallelGCThreads=2", "-XX:PermSize=200m",
-		"-XX:SurvivorRatio=65536", "-XX:TargetSurvivorRatio=0",
-		"-XX:-UseAdaptiveSizePolicy", "-XX:+UseParallelOldGC"
-	};
-
-	private static final Object[] _TEST_JVM_ARGS = {
-		"-Xms256m", "-Xmx256m", "-XX:MaxNewSize=32m", "-XX:MaxPermSize=64m",
-		"-XX:MaxTenuringThreshold=0", "-XX:NewSize=32m",
-		"-XX:ParallelGCThreads=2", "-XX:PermSize=64m",
-		"-XX:SurvivorRatio=65536", "-XX:TargetSurvivorRatio=0",
-		"-XX:-UseAdaptiveSizePolicy", "-XX:+UseParallelOldGC",
-		"-XX:-UseSplitVerifier"
-	};
 
 	private static final Logger _logger = Logging.getLogger(
 		LiferayOSGiDefaultsPlugin.class);
